hphp/hack/test/typecheck/records/record_decl_not_const.php.exp
File "record_decl_not_const.php", line 6, characters 11-15:
Expected constant expression for initializer (Parsing[1002])
File "record_decl_not_const.php", line 6, characters 11-15:
This call is not allowed because its coeffects are incompatible with the context (Typing[4390])
  File "record_decl_not_const.php", line 6, characters 11-15:
  From this declaration, the context of this function body provides the capability set {}
  File "record_decl_not_const.php", line 3, characters 10-12:
  But the function being called requires the default capability set {AccessGlobals, Output, WriteProperty}
  File "coeffect/contexts.hhi", line 28, characters 1-23:
  Hack provides a list of supported contexts here
